# vrl-ls

./: Cargo.toml  README.md  flake.nix  generate_doc.sh
.github/workflows/: build.yaml  docs.yaml  release.yaml
.reuse/templates/: default.jinja2
crates/language-server/: Cargo.toml
crates/language-server/src/: cache.rs  completion.rs  diagnostics.rs  lib.rs  server.rs
crates/language-server/src/utils/: cst.rs  diff.rs  mod.rs  rope.rs
docs/: .gitignore  Makefile  add_players.js  book.toml  flake.nix  package-lock.json  package.json
docs/recordings/configs/: definition.py  diag_unused.py  reference.py  rename.py  stdlib.py
docs/src/: SUMMARY.md  changelog.md  editors.md  setup.md  showcase.md
docs/src/assets/: recordings
nix/: actions.nix  docs.nix  package.nix  shell.nix
src/: main.rs
src/ast/: mod.rs
src/completion/: global.rs  mod.rs  std.rs  stdlib.json
src/diagnostics/: compile.rs  mod.rs
src/server/: mod.rs  vrl.rs
src/utils/: mod.rs
